# xml-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
dom/: Cargo.toml
dom/examples/: dump-element.rs
dom/src/: error.rs  lib.rs
example/: Cargo.toml
example/examples/: main.rs
example/src/: lib.rs
info/: Cargo.toml
info/examples/: dump-xml-info.rs
info/src/: error.rs  lib.rs
nom/: Cargo.toml
nom/src/: helper.rs  lib.rs  model.rs  xmlchar.rs
parser/: Cargo.toml
parser/examples/: dump-tree.rs  validate-xml.rs
parser/src/: lib.rs  model.rs
xpath/: Cargo.toml
xpath/examples/: xe.rs  xq.rs
xpath/src/: error.rs  lib.rs
xpath/src/eval/: error.rs  func.rs  mod.rs  model.rs
xpath/src/expr/: mod.rs  model.rs
